--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
     <h1><%= t ".title" %></h1>
     <p><%= t ".description" %></p>
     <p>
-      <a class="btn btn-primary btn-lg" role="button" href="#sign_up"><%= t ".sign_up" %></a>
+      <a class="btn btn-primary btn-lg" role="button" href="<%= new_users_path %>"><%= t ".sign_up" %></a>
       <%= t ".or" %>
       <a class="" role="button" href="#features"><%= t ".learn_more" %></a>
     </p>
@@ -14,7 +14,3 @@
 </div>
 
 <%= render "features" %>
-
-<hr>
-
-<%= render "sign_up" %>
