--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,5 +3,7 @@
     <h1><%= t ".title" %></h1>
   </div>
 
-  <%= render "form" %>
+  <div id="user_form">
+    <%= render "form" %>
+  </div>
 </div>
