--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,27 +1,8 @@
-<%= form_for User.new, html: { class: "form-horizontal" } do |f| %>
-  <div class="form-group">
-    <%= f.label :name, t(".name"), class: "control-label col-sm-2" %>
-    <div class="col-sm-4">
-      <%= f.text_field :name, class: "form-control " %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%= f.label :email, t(".email"), class: "control-label col-sm-2" %>
-    <div class="col-sm-4">
-      <%= f.text_field :email, class: "form-control " %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%=f.label :password, t(".password"), class: "control-label col-sm-2" %>
-    <div class="col-sm-4">
-      <%= f.password_field :password, class: "form-control " %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%= f.label :password_confirmation, t(".password_confirmation"), class: "control-label col-sm-2" %>
-    <div class="col-sm-4">
-      <%= f.password_field :password_confirmation, class: "form-control " %>
-    </div>
-  </div>
+<%= bootstrap_form_for @user, remote: true, layout: :horizontal, label_col: "col-sm-2", control_col: "col-sm-4" do |f| %>
+  <%= f.text_field :name %>
+  <%= f.text_field :email %>
+  <%= f.password_field :password %>
+  <%= f.password_field :password_confirmation %>
+
   <%= f.submit t(".submit"), class: "btn btn-primary" %>
 <% end %>
