--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <![endif]-->
 
     <%= stylesheet_link_tag "application", :media => "all" %>
+    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 
     <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
   </head>
@@ -30,7 +31,20 @@
             <a class="navbar-brand" href="/"><%= t ".brand" %></a>
           </div>
           <div class="navbar-collapse collapse">
-            <%= yield(:navbar) %>
+            <% if current_user %>
+              <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.name %> <span class="caret"></span></a>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><%= link_to t(".sign_out"), sign_out_path, method: :delete, remote: true %></li>
+                  </ul>
+                </li>
+              </ul>
+            <% else %>
+              <div class="navbar-form navbar-right"> 
+                <a class="btn btn-success" href="<%= sign_in_path %>"><%= t ".sign_in" %></a>
+              </div>
+            <% end %>
           </div><!--/.navbar-collapse -->
         </div>
       </div>
@@ -43,7 +57,5 @@
         <p><%= t ".footer" %></p>
       </footer>
     </div> <!-- /container -->
-
-    <%= javascript_include_tag "application" %>
   </body>
 </html>
