Expected calories per day

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
 
       <hr>
 
-      <footer class="container">
+      <footer class="container text-center">
         <p><%= t ".footer" %></p>
       </footer>
     </div> <!-- /container -->
