--- a/app/views/meals/edit.html.erb
+++ b/app/views/meals/edit.html.erb
@@ -1,5 +1,9 @@
 <div class="container">
   <div class="page-header">
+    <div class="pull-right">
+      <%= link_to t(".back"), :back, :class => "btn btn-default" %>
+    </div>
+
     <h1><%= t ".title" %></h1>
   </div>
 
