--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,6 +3,11 @@
   <%= f.text_field :email %>
   <%= f.password_field :password %>
   <%= f.password_field :password_confirmation %>
+  <%= f.number_field :expected_calories, append: "KCAL" %>
 
-  <%= f.submit t(".submit"), class: "btn btn-primary" %>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <%= f.submit t(".submit"), class: "btn btn-primary" %>
+    </div>
+  </div>
 <% end %>
