--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,7 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.name %> <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
+                    <li><%= link_to t(".settings"), settings_path %></li>
                     <li><%= link_to t(".sign_out"), sign_out_path, method: :delete, remote: true %></li>
                   </ul>
                 </li>
