--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,13 @@
             <% if current_user %>
               <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= t ".manage" %> <span class="caret"></span></a>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><%= link_to t(".users"), users_path %></li>
+                    <li><%= link_to t(".meals"), meals_path %></li>
+                  </ul>
+                </li>
+                <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.name %> <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
                     <li><%= link_to t(".settings"), settings_path %></li>
