--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,13 +33,19 @@
           <div class="navbar-collapse collapse">
             <% if current_user %>
               <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= t ".manage" %> <span class="caret"></span></a>
-                  <ul class="dropdown-menu" role="menu">
-                    <li><%= link_to t(".users"), users_path %></li>
-                    <li><%= link_to t(".meals"), meals_path %></li>
-                  </ul>
-                </li>
+                <% if can?(:manage, User) or can?(:manage, Meal) %>
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= t ".manage" %> <span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                      <% if can? :manage, User %>
+                        <li><%= link_to t(".users"), users_path %></li>
+                      <% end %>
+                      <% if can? :manage, Meal %>
+                        <li><%= link_to t(".meals"), meals_path %></li>
+                      <% end %>
+                    </ul>
+                  </li>
+                <% end %>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.name %> <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
