--- a/app/views/application/_filtered.html.erb
+++ b/app/views/application/_filtered.html.erb
@@ -1,3 +1,5 @@
+<%= flash_messages %>
+
 <% if @meals.any? %>
   <div class="alert alert-warning" role="alert">
     <%= t ".filters_applied_warning_html", clear_filters_link_html: link_to(t(".clear_filters_link"), session[:return_to] || "/") %>
