--- a/app/views/dashboard/_total.html.erb
+++ b/app/views/dashboard/_total.html.erb
@@ -1,21 +1,21 @@
-<div class="panel panel-<%= total_calories_exceeded ? "danger" : "success" %>">
+<div class="panel panel-<%= @dashboard.total_calories_exceeded ? "danger" : "success" %>">
   <div class="panel-heading"><%= t ".title" %></div>
   <div class="panel-body">
-    <% if total_calories_exceeded %>
+    <% if @dashboard.total_calories_exceeded %>
       <div class="alert" role="alert">
         <%= t ".enough_alert" %>
       </div>
     <% else %>
       <div class="progress">
-        <div class="progress-bar progress-bar-striped progress-bar-success" role="progressbar" aria-valuenow="<%= total_calories_percent %>" aria-valuemin="0" aria-valuemax="100" style="width: <%= total_calories_percent %>%;">
+        <div class="progress-bar progress-bar-striped progress-bar-success" role="progressbar" aria-valuenow="<%= @dashboard.total_calories_percent %>" aria-valuemin="0" aria-valuemax="100" style="width: <%= @dashboard.total_calories_percent %>%;">
         </div>
       </div>
     <% end %>
 
     <table class="table">
       <tbody>
-        <tr><th><%= t ".total" %></th><td class="text-right"><%= number_with_delimiter current_user.total_calories %></td></tr>
-        <tr><th><%= t ".expected" %></th><td class="text-right"><%= number_with_delimiter current_user.expected_calories %></td></tr>
+        <tr><th><%= t ".total" %></th><td class="text-right"><%= number_with_delimiter @dashboard.total_calories %></td></tr>
+        <tr><th><%= t ".expected" %></th><td class="text-right"><%= number_with_delimiter @dashboard.expected_calories %></td></tr>
       </tbody>
     </table>
   </div>
