--- a/app/views/dashboard/_unfiltered.html.erb
+++ b/app/views/dashboard/_unfiltered.html.erb
@@ -1,6 +1,6 @@
 <%= flash_messages %>
 
-<% if @meals.any? %>
+<% if @dashboard.meals.any? %>
   <%= render "table" %>
 <% else %>
   <%= t ".none_html", new_meal_link_html: link_to(t(".new_meal_link_title"), new_meal_path) %>
