--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -10,7 +10,7 @@
   </div>
   <div class="row">
     <div class="col-sm-4">
-      <% if @meals.any? %>
+      <% if @dashboard.meals.any? %>
         <%= render "total" %>
         <%= render "filters" %>
       <% end %>
