--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <hr>
 
 <footer class="container text-center">
-  <p><%= t ".text" %></p>
+  <p><%= t ".text" %> | <%= link_to 'Angular', angular_path %></p>
 </footer>
