--- a/app/views/angular/index.html.erb
+++ b/app/views/angular/index.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="chewy-tracker">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
@@ -10,7 +10,7 @@
 
     <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
   </head>
-  <body>
+  <body ng-app="chewyTracker" ng-controller="DashboardCtrl">
     <%= render 'navbar' %>
 
     <div class="container">
@@ -37,10 +37,10 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <td>Dinner on Saturday</td>
-                <td>250</td>
-                <td>06 Aug 18:00</td>
+              <tr ng-repeat="meal in meals">
+                <td>{{meal.name}}</td>
+                <td>{{meal.calories}}</td>
+                <td>{{meal.when}}</td>
                 <td>
                   <div class="pull-right">
                     <a href="" class="btn btn-primary">Edit</a>
