--- a/app/assets/javascripts/angular/layout/_navbar.html
+++ b/app/assets/javascripts/angular/layout/_navbar.html
@@ -1,20 +1,22 @@
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation" ng-controller="NavbarCtrl">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only"><%= t ".toggle_navigation" %></span>
+        <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="<%= angular_path %>">ChewyTracker</a>
+      <a class="navbar-brand" ui-sref="dashboard">ChewyTracker</a>
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.name %> <span class="caret"></span></a>
+        <li class="dropdown" ng-if="isLoggedIn">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            {{currentUser.name}} <span class="caret"></span>
+          </a>
           <ul class="dropdown-menu" role="menu">
-            <li><%= link_to "Sign out", sign_out_path, method: :delete, remote: true %></li>
+            <li><a href="#" ng-click="logOut()">Sign out</a></li>
           </ul>
         </li>
       </ul>
