--- a/app/assets/javascripts/angular/layout/_footer.html
+++ b/app/assets/javascripts/angular/layout/_footer.html
@@ -1,5 +1,5 @@
 <hr>
 
 <footer class="container text-center">
-  <p> Built by Martin | <a href="/">Rails</a></p>
+  <p> Built by Martin | <a href="/">Switch to Rails frontend</a></p>
 </footer>
